modified css for links

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,3 +1,42 @@
+body{
+    margin: 0;
+}
+
 .links{
-    background: silver;
+    display: flex;
+    justify-content: flex-end;
+      
+    margin-top: 15px;
+    
+}
+
+.links a{
+    color: black;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    height: 20px;
+    margin-top: 5px;
+    
+
+}
+
+.links a:first-child{
+    margin-right: 15px;
+}
+
+.links a:last-child{
+    margin-right: 80px;
+}
+
+.links a:hover{
+    text-decoration: underline;
+}
+
+
+    
+
+    
+
+    
 }
