--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2,32 +2,33 @@ body{
     margin: 0;
 }
 
-.links{
+.pages{
     display: flex;
     justify-content: flex-end;
-      
-    margin-top: 15px;
+    align-items: center;
+    height: 48px;
+    padding: 6px;
     
 }
 
-.links a{
+.pages a{
     color: black;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
+    font-size: 13px;
     height: 20px;
     margin-top: 5px;
-    font-weight: lighter;
     
 
 }
 
-.links a:first-child{
-    margin-right: 15px;
+.pages a:first-child{
+    margin-right: 24px;
+    
 }
 
-.links a:last-child{
-    margin-right: 75px;
+.pages a:last-child{
+    margin-right: 120px;
 }
 
 .links a:hover{
@@ -39,8 +40,6 @@ body{
     height: 290px;
     justify-content: center;
     align-items: flex-end;
-    
-    
 }
 
 #googleSearchLogo{
@@ -48,39 +47,77 @@ body{
     height: 92px;
 }
 
-.googleSearch{
+form{
     display: flex;
-    justify-content: center;
     height: 120px;
     
-}
+    padding: 20px;
+    flex-direction: column;
+    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 
-form{
-    
 }
 
 .window{
-   
-    
+    display: flex;
+    height: 20px;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ddd;
+    padding: 12px;
+    border-radius: 25px;
+    width: 558px;
+    margin-top: 6px;
 }
 
 #text{
-    width: 580px;
-    height: 25px;
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    margin-left: 7px;
+
     
 }
+
+.window:hover{
+    border: 1px solid #fff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.05),
+                0 0 2px rgba(0, 0, 0, 0.05),
+                0 0 3px rgba(0, 0, 0, 0.05),
+                0 0 4px rgba(0, 0, 0, 0.05),
+                0 0 5px rgba(0, 0, 0, 0.05),
+                0 0 4px rgba(0, 0, 0, 0.05),
+                0 0 5px rgba(0, 0, 0, 0.05);
+}
+
+.search-icon{
+    width: 21px;
+    opacity: .4;
+    margin-left: 3px;
+}
+
+.mic-icon{
+    width: 24px;
+    margin-right: 5px;
+}
+
+
 
 .buttons{
-    
-    margin-top: 20px;
-    
     width: fit-content;
-    margin-left: 50%;
-    transform: translate(-50%);
-    flex-grow: 0;
+    
 }
     
-
+.button{
+    margin-left: 15px;
+    margin-right: 15px;
+    height: 30px;
+    width: 130px;
+}
     
 
     
