--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,6 +1,19 @@
-body{
+*{
     margin: 0;
+    padding: 0;
+    text-decoration: none;
+    
 }
+
+
+html, body{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
 
 .pages{
     display: flex;
@@ -8,6 +21,7 @@ body{
     align-items: center;
     height: 48px;
     padding: 6px;
+    
     
 }
 
@@ -23,17 +37,21 @@ body{
 }
 
 .pages a:first-child{
-    margin-right: 24px;
+    margin-right: 16px;
     
 }
 
 .pages a:last-child{
-    margin-right: 120px;
+    margin-right: 116px;
 }
 
-.links a:hover{
+.pages a:hover{
     text-decoration: underline;
 }
+
+
+
+
 
 #googleLogo{
     display: flex;
@@ -50,7 +68,6 @@ body{
 form{
     display: flex;
     height: 120px;
-    
     padding: 20px;
     flex-direction: column;
     justify-content: flex-end;
@@ -75,7 +92,7 @@ form{
 #text{
     font-size: 16px;
     width: 100%;
-    height: 100%;
+    height: 20px;
     border: none;
     outline: none;
     margin-left: 7px;
@@ -95,9 +112,9 @@ form{
 }
 
 .search-icon{
-    width: 21px;
+    width: 22px;
     opacity: .4;
-    margin-left: 3px;
+    margin-left: 2px;
 }
 
 .mic-icon{
@@ -109,15 +126,115 @@ form{
 
 .buttons{
     width: fit-content;
+    margin-left: 7px;
+    margin-bottom: 3px;
+    
     
 }
-    
+
+
+
 .button{
-    margin-left: 15px;
+    /*margin-left: 15px;
     margin-right: 15px;
     height: 30px;
-    width: 130px;
+    width: 130px;*/
+
+    border: 1px solid transparent;
+    padding: 9px 16px;
+    color: #222;
+    background: rgb(248, 248, 248);
+    font-size: 14px;
+    border-radius: 4px;
+    display: inline-block;
+    margin-right: 7px;
+    outline: none;
+    cursor: pointer;
+    
 }
+
+.button:hover{
+    border: 1px solid #aaa;
+}
+
+.lang{
+    
+    margin-top: 7px;
+    margin-right: 3px;
+    text-align: center;
+    font-size: 13px;
+    font-family: Arial, sans-serif;
+    color: #111;
+    
+}
+
+.lang a{
+    margin-left: 3px;
+    color: #1a0dab;
+    text-decoration: none;
+}
+
+.lang a:hover{
+    text-decoration: underline;    
+}
+
+footer{
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    margin-top: 20px;
+    
+}
+
+.footerEnd{
+    background: #f2f2f2;
+    width: 100%;
     
 
+}
+
+footer h4{
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 15px;
+    line-height: 45px;
+    font-weight: 400;
+    padding-left: 29px;
+    border: 1px solid #eee;
+}
+
+footer a{
+    color: #5f6368;
+    display: inline-block;
+    padding: 15.5px 12.3px;
+    font-size: 14px;
     
+    color: rgba(0, 0, 0, 0.67);
+}
+
+footer a:hover{
+    text-decoration: underline;
+
+}
+
+.links{
+    border-top: 1px solid #ddd;
+    display: flex;
+    width: 100%;
+}
+
+.link-1{
+    padding-left: 22px;
+    flex: 1;
+}
+
+.link-2{
+    padding-right: 22.7px;
+    
+}
+
+@media (max-width: 600px) {
+    .window{
+        width: 95%;
+    }
+}
+
