--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2,18 +2,14 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    
 }
-
 
 html, body{
     display: flex;
     flex-direction: column;
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
-
 
 .pages{
     display: flex;
@@ -21,24 +17,18 @@ html, body{
     align-items: center;
     height: 48px;
     padding: 6px;
-    
-    
 }
 
 .pages a{
     color: black;
-    text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     height: 20px;
     margin-top: 5px;
-    
-
 }
 
 .pages a:first-child{
     margin-right: 16px;
-    
 }
 
 .pages a:last-child{
@@ -49,20 +39,19 @@ html, body{
     text-decoration: underline;
 }
 
-
-
-
-
-#googleLogo{
+.google-S{
     display: flex;
     height: 290px;
     justify-content: center;
     align-items: flex-end;
 }
 
-#googleSearchLogo{
+
+
+#S-Logo{
     width: 272px;
     height: 92px;
+    
 }
 
 form{
@@ -73,10 +62,9 @@ form{
     justify-content: flex-end;
     justify-content: space-between;
     align-items: center;
-
 }
 
-.window{
+.S-searchBar{
     display: flex;
     height: 20px;
     width: fit-content;
@@ -89,18 +77,18 @@ form{
     margin-top: 6px;
 }
 
-#text{
+#S-text{
     font-size: 16px;
     width: 100%;
     height: 20px;
     border: none;
     outline: none;
-    margin-left: 7px;
+    margin-left: 12px;
 
     
 }
 
-.window:hover{
+.S-searchBar:hover{
     border: 1px solid #fff;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.05),
                 0 0 2px rgba(0, 0, 0, 0.05),
@@ -111,35 +99,25 @@ form{
                 0 0 5px rgba(0, 0, 0, 0.05);
 }
 
-.search-icon{
+#S-search{
     width: 22px;
-    opacity: .4;
+    opacity: .35;
     margin-left: 2px;
 }
 
-.mic-icon{
-    width: 24px;
+#S-mic{
+    width: 27px;
     margin-right: 5px;
+    margin-top: 2px;
 }
 
-
-
-.buttons{
+.btns{
     width: fit-content;
     margin-left: 7px;
     margin-bottom: 3px;
-    
-    
 }
 
-
-
-.button{
-    /*margin-left: 15px;
-    margin-right: 15px;
-    height: 30px;
-    width: 130px;*/
-
+.btn{
     border: 1px solid transparent;
     padding: 9px 16px;
     color: #222;
@@ -150,22 +128,19 @@ form{
     margin-right: 7px;
     outline: none;
     cursor: pointer;
-    
 }
 
-.button:hover{
-    border: 1px solid #aaa;
+.btn:hover{
+    border: 1px solid #ddd;
 }
 
 .lang{
-    
     margin-top: 7px;
     margin-right: 3px;
     text-align: center;
     font-size: 13px;
     font-family: Arial, sans-serif;
     color: #111;
-    
 }
 
 .lang a{
@@ -183,14 +158,11 @@ footer{
     display: flex;
     align-items: flex-end;
     margin-top: 20px;
-    
 }
 
-.footerEnd{
+.footerDiv{
     background: #f2f2f2;
     width: 100%;
-    
-
 }
 
 footer h4{
@@ -203,17 +175,14 @@ footer h4{
 }
 
 footer a{
-    color: #5f6368;
+    color: rgba(0, 0, 0, 0.67);
     display: inline-block;
     padding: 15.5px 12.3px;
     font-size: 14px;
-    
-    color: rgba(0, 0, 0, 0.67);
 }
 
 footer a:hover{
     text-decoration: underline;
-
 }
 
 .links{
@@ -229,11 +198,10 @@ footer a:hover{
 
 .link-2{
     padding-right: 22.7px;
-    
 }
 
 @media (max-width: 600px) {
-    .window{
+    .searchBar{
         width: 95%;
     }
 }
