--- a/assets/css/google-I.css
+++ b/assets/css/google-I.css
@@ -3,7 +3,6 @@
     height: 230px;
     justify-content: center;
     align-items: flex-end;
-    
 }
 
 .google-I h4{
@@ -39,8 +38,6 @@
     border: none;
     outline: none;
     margin-left: 12px;
-
-    
 }
 
 .I-searchBar:hover{
@@ -66,13 +63,29 @@
     margin-right: 16px;
 }
 
+.material-icons.cam:hover{
+    cursor: pointer;
+}
+
 .material-icons.mic{
     margin-right: 20px;
 }
 
-
+.material-icons.mic:hover{
+    cursor: pointer;
+}
 
 .material-icons.searchBlue{ 
     color: #4285F4; 
     margin-right: 4px;
 }
+.material-icons.searchBlue:hover{
+    cursor: pointer;
+}
+
+@media (max-width: 600px) {
+    .I-searchBar{
+        width: 95%;
+    }
+}
+
